--- a/assignment.html
+++ b/assignment.html
@@ -2,19 +2,21 @@
 <html lang="en">
 <head>
     <style>
-        /* General Styles */
+        body {
+    font-family: 'verdana', sans-serif;
+    line-height: 1.6;
+    background: url('webb.jpg') no-repeat center center fixed;
+    background-size: cover; 
+    color: white; 
+
+
+        
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Arial', sans-serif;
-    line-height: 1.6;
-    background: linear-gradient(120deg, #84fab0, #8fd3f4);
-    color: #333;
-}
 
 .container {
     width: 80%;
@@ -73,7 +75,7 @@ header nav ul li a:hover {
 h2 {
     margin-bottom: 20px;
     font-size: 2em;
-    color: #222;
+    color: #c18383;
 }
 
 .section p {
@@ -132,7 +134,7 @@ h2 {
 .skills-list li {
     margin: 10px 0;
     font-size: 1.2em;
-    color: #555;
+    color: #5dabcd;
 }
 
 /* Footer */
@@ -151,14 +153,14 @@ footer p {
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
+    <title>Tsion's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Software Engineer | Web Developer | Problem Solver</p>
+            <h1>TSION TELILA</h1>
+            <p> Web Developer | Problem Solver</p>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -173,7 +175,7 @@ footer p {
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I’m [Your Name], a creative and passionate software engineer. I specialize in building dynamic web applications and solving complex problems with innovative solutions.</p>
+            <p>Hello! I am Tsion, a passionate Computer Science student with a strong interest in web development. I have experience working with HTML and CSS to create clean and responsive designs. As a fast learner, I am eager to expand my knowledge, take on new challenges, and continuously improve my skills in the ever-changing tech landscape.</p>
         </div>
     </section>
 
@@ -183,15 +185,15 @@ footer p {
             <div class="project-grid">
                 <div class="project">
                     <h3>Project 1</h3>
-                    <p>A cool web application. <a href="#" target="_blank">View Project</a></p>
+                    <p>A <a href="https://github.com/tsiontelila/CssLap" target="_blank">View Project</a></p>
                 </div>
                 <div class="project">
                     <h3>Project 2</h3>
-                    <p>A Python data analysis tool. <a href="#" target="_blank">View Project</a></p>
+                    <p> <a href="https://github.com/tsiontelila/webdev/commit/31a12ed9f60d6a0d9d23dd3a1f438232356542e6" target="_blank">View Project</a></p>
                 </div>
                 <div class="project">
                     <h3>Project 3</h3>
-                    <p>A mobile app design. <a href="#" target="_blank">View Project</a></p>
+                    <p> <a href="https://github.com/tsiontelila/webdev/commit/31a12ed9f60d6a0d9d23dd3a1f438232356542e6" target="_blank">View Project</a></p>
                 </div>
             </div>
         </div>
@@ -202,9 +204,8 @@ footer p {
             <h2>Skills</h2>
             <ul class="skills-list">
                 <li>HTML & CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Python</li>
+                <li>Java</li>
+                <li>C++</li>
                 <li>Git & GitHub</li>
             </ul>
         </div>
@@ -213,15 +214,14 @@ footer p {
     <section id="contact" class="section">
         <div class="container">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">Your Profile</a></p>
-            <p>GitHub: <a href="https://github.com/yourprofile" target="_blank" rel="noopener noreferrer">Your Profile</a></p>
+            <p>Email: <a href="mailto:telilatsion@gmail.com">telilatsion@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/Tsion Telila" target="_blank" rel="noopener noreferrer">tsion</a></p>
+            <p>GitHub: <a href="https://github.com/tsiontelila" target="_blank" rel="noopener noreferrer">tsiontelila</a></p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
         </div>
     </footer>
 </body>
