--- a/index.html
+++ b/index.html
@@ -2,154 +2,165 @@
 <html lang="en">
 <head>
     <style>
-        body {
-    font-family: 'verdana', sans-serif;
-    line-height: 1.6;
-    background: url('webb.jpg') no-repeat center center fixed;
-    background-size: cover; 
-    color: white; 
+       
 
 
-        
+/* Global Styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Verdana', sans-serif;
+    line-height: 1.6;
+    background: url('webb.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #f4f4f4;
+    text-align: center;
+}
 
+/* Container */
 .container {
-    width: 80%;
+    width: 85%;
     max-width: 1200px;
     margin: 0 auto;
 }
 
 /* Header */
 header {
-    background: rgba(0, 0, 0, 0.8);
-    color: #9e7b7b;
+    background: rgba(0, 0, 0, 0.9);
+    color: #ffffff;
     text-align: center;
-    padding: 20px 0;
+    padding: 15px 0;
     position: sticky;
     top: 0;
     z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 header h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-}
-
-header p {
-    font-size: 1.2em;
+    font-size: 2.8em;
+    letter-spacing: 2px;
+    margin-bottom: 5px;
 }
 
 header nav ul {
     list-style: none;
-    padding: 10px 0;
     display: flex;
     justify-content: center;
+    padding: 10px 0;
 }
 
 header nav ul li {
-    margin: 0 15px;
+    margin: 0 20px;
 }
 
 header nav ul li a {
-    color: #fff;
+    color: #f4f4f4;
     text-decoration: none;
-    font-size: 1em;
-    transition: color 0.3s ease;
+    font-size: 1.1em;
+    transition: color 0.3s ease-in-out;
 }
 
 header nav ul li a:hover {
     color: #84fab0;
 }
 
-/* Section */
+/* Sections */
 .section {
-    padding: 60px 20px;
-    text-align: center;
+    padding: 70px 20px;
 }
 
 h2 {
-    margin-bottom: 20px;
-    font-size: 2em;
-    color: #c18383;
+    font-size: 2.5em;
+    margin-bottom: 15px;
+    color: #ffb6c1;
 }
 
 .section p {
-    font-size: 1.1em;
-    margin-bottom: 20px;
+    font-size: 1.2em;
+    margin-bottom: 15px;
+    color: #f4f4f4;
 }
 
-/* Projects */
+/* Projects Section */
 .project-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     gap: 20px;
 }
 
 .project {
-    background: #fff;
-    padding: 20px;
+    background: rgba(255, 255, 255, 0.15);
+    padding: 25px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    flex: 1 1 calc(30% - 20px);
-    text-align: left;
+    width: 30%;
+    min-width: 250px;
+    text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    backdrop-filter: blur(10px);
 }
 
 .project:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    transform: translateY(-8px);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
 }
 
 .project h3 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+    font-size: 1.6em;
     color: #84fab0;
+    margin-bottom: 10px;
 }
 
 .project a {
-    color: #333;
-    text-decoration: underline;
+    color: #ffdf91;
+    text-decoration: none;
     font-weight: bold;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease-in-out;
 }
 
 .project a:hover {
-    color: #8fd3f4;
+    color: #ff9800;
 }
 
 /* Skills */
 .skills-list {
-    display: inline-block;
-    text-align: left;
     list-style: none;
-    padding: 0;
+    text-align: center;
+    display: inline-block;
 }
 
 .skills-list li {
-    margin: 10px 0;
-    font-size: 1.2em;
+    font-size: 1.3em;
     color: #5dabcd;
+    margin: 10px 0;
+}
+
+/* Contact */
+.section a {
+    color: #84fab0;
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+.section a:hover {
+    color: #ff9800;
 }
 
 /* Footer */
 footer {
-    background: #482a2a;
-    color: #fff;
+    background: rgba(0, 0, 0, 0.9);
+    color: #f4f4f4;
     text-align: center;
     padding: 15px 0;
     margin-top: 40px;
+    font-size: 1em;
 }
 
-footer p {
-    font-size: 0.9em;
-}
-        }
 
     </style>
     <meta charset="UTF-8">
